<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/workoutsFragment"
        android:icon="@drawable/ic_workouts"
        android:title="@string/title_workouts" />
    <item
        android:id="@+id/exercisesFragment"
        android:icon="@drawable/ic_exercises"
        android:title="@string/title_exercises" />
    <item
        android:id="@+id/progressFragment"
        android:icon="@drawable/ic_progress"
        android:title="@string/title_progress" />
    <item
        android:id="@+id/proFeaturesFragment"
        android:icon="@drawable/ic_pro_features"
        android:title="@string/title_pro_features" />
</menu>
